# lab4CA

./: CMakeLists.txt
app/: CMakeLists.txt  example.txt  lab3.cpp
data/: pages.csv
include/Analyser/: Context.h  Interpreter.h
include/Memory/: Memory.h
include/Reader/: FileReader.h  Reader.h  StringReader.h
src/: CMakeLists.txt
src/Analyser/: Context.cpp  Interpreter.cpp
src/Memory/: Memory.cpp
src/Reader/: FileReader.cpp  Reader.cpp  StringReader.cpp
tests/: CMakeLists.txt
tests/fixtures/: IntegrationTestFixture.h  Variant10Test.h
tests/instructions/: ComplexInstructionTests.cpp  SingleInstructionTests.cpp
tests/integration/: IntegrationTests.cpp
tests/utils/: TestUtils.h
